tools/cmd/vendor/github.com/stretchr/testify: Vendor v1.1.4
We use this for testing, so we want a vendored reference in the
repository.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
 [submodule "tools/cmd/vendor/github.com/sirupsen/logrus"]
 	path = tools/cmd/vendor/github.com/sirupsen/logrus
 	url = https://github.com/sirupsen/logrus.git
+[submodule "tools/cmd/vendor/github.com/stretchr/testify"]
+	path = tools/cmd/vendor/github.com/stretchr/testify
+	url = https://github.com/stretchr/testify.git
 [submodule "tools/cmd/vendor/github.com/urfave/cli"]
 	path = tools/cmd/vendor/github.com/urfave/cli
 	url = https://github.com/urfave/cli.git
